support private classes

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10469,6 +10469,7 @@ section.classes {
         right: 0; }
       section.classes .list-item .flex .class-info {
         display: inline-block;
+        text-align: center;
         width: 100px;
         margin-right: 30px;
         font-family: GothicA1;
