--- a/sass/theme/_classes_page.scss
+++ b/sass/theme/_classes_page.scss
@@ -65,6 +65,7 @@ section.classes {
 	
 			.class-info {
 				display: inline-block;
+				text-align: center;
 				width: 100px;
 				margin-right: 30px;
 				font-family: GothicA1;
