fix program landing page

--- a/sass/theme/_landing_page.scss
+++ b/sass/theme/_landing_page.scss
@@ -28,7 +28,7 @@ section.featured {
 section.quote {
 	position: relative;
 	padding: 0;
-	height: 600px;
+	//height: 600px;
 
 	.background {
 		position: absolute;
