--- a/sass/theme/_landing_page.scss
+++ b/sass/theme/_landing_page.scss
@@ -25,6 +25,13 @@ section.featured {
 	}
 }
 
+div.landing-donate {
+	margin-top: 12rem;
+	.support-vera-graphic {
+		height: 23%;
+	}
+}
+
 section.quote {
 	position: relative;
 	padding: 0;
