program types in program landing page done

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10012,7 +10012,8 @@ section.banner {
   padding: 0;
   height: 900px;
   color: white;
-  text-align: left; }
+  text-align: left;
+  overflow: hidden; }
   section.banner > * {
     position: absolute;
     width: 100%; }
@@ -10023,15 +10024,6 @@ section.banner {
     left: -210px;
     height: 100%;
     width: 209px;
-    background-color: #FFF;
-    z-index: -1; }
-  section.banner::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: -215px;
-    height: 105%;
-    width: 214px;
     background-color: #FFF;
     z-index: -1; }
   section.banner .row > *:first-child {
@@ -10304,19 +10296,20 @@ section.blog {
 section.featured {
   padding-top: 0px; }
   section.featured .featured-image {
-    height: 480px; }
+    max-height: 480px;
+    min-height: 360px;
+    width: 100%;
+    object-fit: cover; }
   section.featured .featured-info {
-    text-align: left;
-    padding-left: 75px;
-    padding-top: 80px; }
+    text-align: left; }
     section.featured .featured-info h2 {
       font-family: BebasNeue;
-      font-size: 72px; }
+      font-size: 64px; }
     section.featured .featured-info p {
       margin-top: 20px;
       margin-bottom: 20px;
       font-family: GothicA1;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 1.5; }
 
 div.landing-donate {
@@ -10334,43 +10327,6 @@ section.quote {
     width: 100%;
     background-color: #96C0CE;
     z-index: -3; }
-  section.quote .quote-picture {
-    float: left;
-    height: 524px;
-    width: 524px;
-    margin-top: -35px;
-    margin-left: 155px;
-    background-color: black; }
-  section.quote .quote-body {
-    position: relative;
-    float: left;
-    width: 550px;
-    margin-top: 175px;
-    margin-left: 128px;
-    text-align: left; }
-    section.quote .quote-body:before {
-      content: "“";
-      position: absolute;
-      color: white;
-      opacity: .35;
-      top: -78px;
-      left: -30px;
-      font-family: "GothicA1";
-      font-size: 200px; }
-    section.quote .quote-body .quote-text {
-      font-family: "BebasNeue";
-      font-size: 34px;
-      line-height: 1;
-      letter-spacing: 1.5px; }
-      section.quote .quote-body .quote-text b {
-        color: #D41C53; }
-    section.quote .quote-body .quote-author {
-      font-family: GothicA1;
-      font-size: 14px;
-      font-weight: bold;
-      line-height: 2;
-      letter-spacing: 1.6px;
-      text-transform: uppercase; }
 
 section.adventure {
   max-width: 960px;
