--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -359,6 +359,7 @@ section.banner {
 	height: 900px;
 	color: white;
 	text-align: left;
+	overflow: hidden;
 
 	> * {
 		position: absolute;
@@ -376,16 +377,16 @@ section.banner {
 		z-index: -1;
 	}
 
-	&::after {
-		content:" ";
-		position: absolute;
-		top: 0;
-		right: -215px;
-		height: 105%;
-		width: 214px;
-		background-color: $background;
-		z-index: -1;
-	}
+	//&::after {
+	//	content:" ";
+	//	position: absolute;
+	//	top: 0;
+	//	right: -215px;
+	//	height: 105%;
+	//	width: 214px;
+	//	background-color: $background;
+	//	z-index: -1;
+	//}
 
 	.row > *:first-child {
 		padding: 240px 20px 115px 240px;
